--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,7 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.18"
   },
-  "engines" : { 
-    "node" : "14.19.3"
+  "engines": {
+    "node": "14.19.3"
   }
 }
