--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.0",
     "express": "^4.18.1",
+    "mongoose": "^6.4.4",
     "nodemon": "^2.0.18"
   },
   "engines": {
