--- a/package.json
+++ b/package.json
@@ -4,18 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node app.js"
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc -p .",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/set-tz": "^0.2.0",
     "amqplib": "^0.10.0",
+    "axios": "^0.27.2",
+    "brandi": "^4.0.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
-    "nodemon": "^2.0.18"
+    "parse-function": "^5.6.10",
+    "set-tz": "^0.2.0",
+    "winston": "^3.8.1"
   },
   "engines": {
     "node": "14.19.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.4",
+    "@types/supertest": "^2.0.12",
+    "@types/typescript": "^2.0.0",
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
