--- a/appspec.yml
+++ b/appspec.yml
@@ -2,17 +2,17 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/express-app-new
-# hooks:
-#   ApplicationStop:
-#     - location: scripts/application_stop.sh
-#       timeout: 300
-#       runas: ec2-user
-#   BeforeInstall:
-#     - location: scripts/before_install.sh
-#       timeout: 300
-#       runas: ec2-user
-#   ApplicationStart:
-#     - location: scripts/application_start.sh
-#       timeout: 300
-#       runas: ec2-user
+    destination: /home/ec2-user/express-app
+hooks:
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ec2-user
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ec2-user
+  ApplicationStart:
+    - location: scripts/application_start.sh
+      timeout: 300
+      runas: ec2-user
